# trading-etf-app

./: .env.production  .env.test  .gitignore  CLAUDE.md  CORRECTIONS_FINALES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MANUAL.md  ETF_PAGE_DIAGNOSTIC_REPORT.md  GITHUB-SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  INSTRUCTIONS_SÉCURITÉ.md  NOTIFICATIONS_GUIDE.md  OPTIMISATIONS_REALISEES.md  README.md  UPGRADE_SUMMARY.md  WINDOWS-SETUP.md  analyze_cspx_issue.py  api_keys.txt  check-etf-page.sh  check_status.py  create_user_api.py  debug_cspx_price.py  debug_signup.sh  debug_sql.py  deploy_optimizations.py  docker-compose.production.test.yml  docker-compose.production.yml  docker-compose.yml  fix-wsl-access.ps1  fix-wsl-network.sh  fix_api_calls.sh  fix_api_syntax.sh  fix_portfolio.sh  fix_syntax_final.sh  generate-production-secrets.sh  init_sample_data.py  network-proxy.py  nginx_api_ssl.conf  nginx_complete_ssl.conf  (+32 more)
backend/: Dockerfile  Dockerfile.prod  Dockerfile.production  Dockerfile.simple  add_etf_symbol_mapping.py  add_more_etfs.py  add_sample_data.py  alembic_add_indexes.py  check_data.py  check_etfs_schema.py  check_portfolio_schema.py  check_schema.py  create_default_portfolio.py  create_test_portfolio.py  create_test_signals.py  create_test_user.py  create_test_user_simple.py  create_user_etf_preferences.py  docker-entrypoint-production.sh  fix_database_schema.py  fix_production_errors.py  generate_vapid_keys.py  init_admin_user.py  init_data_simple.py  init_database_complete.py  init_real_data_only.py  init_simple.py  populate_etf_catalog.py  (+23 more)
(+207 files in other folders)
