[tool.poetry]
name = "trading-etf-backend"
version = "0.1.0"
description = "ETF Trading Application Backend"
authors = ["Trading ETF Team <team@tradingetf.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.16.0"
psycopg2-binary = "^2.9.0"
redis = "^5.2.0"
celery = "^5.5.0"
pydantic = "^2.11.0"
pydantic-settings = "^2.9.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.0"}
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"
httpx = "^0.28.0"
pandas = "^2.3.0"
numpy = "^2.2.0"
prometheus-client = "^0.22.0"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true